# mentalengine

./: .clangd  .gitignore  CAMERA_CONTROLS.md  Doxyfile  LICENSE  README.md  imgui.ini  meson.build
.cache/clangd/index/: Renderer.cpp.6B2B1B690C3DE003.idx  Renderer.h.2CC63E300F190933.idx  T1.h.B118608952389E80.idx  Types.h.93144FE82AF241C4.idx  UserInterface.h.ED3ADA113B7FFF88.idx  WindowManager.h.0784A666A5E283C6.idx  imconfig.h.09D70B3973E94D66.idx  imgui.cpp.8B5C8BA4FD94BC9F.idx  imgui.h.36C6C137447B4E50.idx  imgui_demo.cpp.1B2A186CA75C368D.idx  imgui_draw.cpp.2F1A80A3B825B689.idx  imgui_impl_glfw.cpp.775BBC9ABF1570EC.idx  imgui_impl_glfw.h.2E9EC6CB760861D5.idx  imgui_impl_opengl3.cpp.A97A60F1314ADC9E.idx  imgui_impl_opengl3.h.69CBB405E957BA7D.idx  imgui_impl_opengl3_loader.h.C1BDDD3868284E12.idx  imgui_internal.h.6152637F1D451540.idx  main.cpp.FC1B41C3B5FA3F25.idx  (+5 more)
.zed/: settings.json  tasks.json
docs/html/: README_8md.html  Renderer_8cpp.html  Renderer_8cpp_source.html  Renderer_8h.html  Renderer_8h.js  Renderer_8h_source.html  T1_8h.html  T1_8h.js  T1_8h_source.html  Types_8h.html  Types_8h.js  Types_8h_source.html  UserInterface_8h.html  UserInterface_8h.js  UserInterface_8h_source.html  WindowManager_8h.html  WindowManager_8h.js  WindowManager_8h_source.html  annotated.html  annotated_dup.js  classConsoleRedirectBuffer-members.html  classConsoleRedirectBuffer.html  classConsoleRedirectBuffer.js  classMentalT1Layer-members.html  classMentalT1Layer.html  classMentalT1Layer.js  classRenderer-members.html  classRenderer.html  classRenderer.js  classUserInterface-members.html  classUserInterface.html  classUserInterface.js  classWindowManager-members.html  classWindowManager.html  classWindowManager.js  classes.html  dir_1f10682fec53f0772108851bfcef2e4d.html  dir_1f10682fec53f0772108851bfcef2e4d.js  dir_42496cb41d919327ca2b7482f0b8b24e.html  dir_42496cb41d919327ca2b7482f0b8b24e.js  (+25 more)
source/: main.cpp
source/Core/: Math.cpp  Math.h  Types.h
source/T1/: T1.h
todo/: mental_engine.todo
(+52 files in other folders)
